<resources>
    <string name="app_name">RetrofitTest</string>
    <string name="draw_open">open</string>
    <string name="draw_close">close</string>
    <string name="share_pic_str">share_pic</string>

    <string name="caloriesrace_starttime_endtime">活动时间 : %1$s-%2%s</string>
    <string name="caloriesrace_countdown_unit">天</string>
    <string name="caloriesrace_countdown_hint">距活动开始</string>
    <string name="signup_cloriesrace_info_title">填写报名基本信息</string>
    <string name="realname_edittext_hint">请填写真实姓名</string>
    <string name="workno_edittext_hint">请填写工号 (豆芽号)</string>
    <string name="signup_caloiresrace_btn_text">立即报名</string>
    <string name="look_over_caloriesrace_rules">查看详细活动规则</string>
    <string name="caloriesrace_sponsor">主办方 : C2M集团小Biu智能</string>
    <string name="has_signed_up_caloriesrace">已报名</string>

    <string name="receiver">收货人</string>
    <string name="receiver_input_hint">请填写收货人姓名</string>
    <string name="telephone">手机号码</string>
    <string name="telephone_input_hint">请填写收货人手机号</string>
    <string name="locate_zone">所在地区</string>
    <string name="locate_zone_hint">省/市/区/县</string>
    <string name="detail_address">详细地址</string>
    <string name="detail_address_input_hint">街道、楼牌号等</string>
</resources>
