<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/scrollview">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/constraintlayout">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_enroll_big"
            android:scaleType="fitXY"
            android:id="@+id/background_imageview"/>
        <ImageView
            android:id="@+id/iv_race_sign_up_back"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="22dp"
            android:scaleType="center"
            android:src="@drawable/back"
            android:layout_gravity="left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="@+id/guideline">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:textColor="#CBFFFFFF"
                android:textSize="12sp"
                android:text="@string/caloriesrace_starttime_endtime"
                android:id="@+id/race_starttime_endtime"/>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/caloriesrace_countdown_bg"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="65dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/count_down_day_num"
                        android:textColor="@color/white"
                        android:textSize="48sp"
                        tools:text="14"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caloriesrace_countdown_unit"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_toRightOf="@id/count_down_day_num"
                        android:layout_alignBaseline="@id/count_down_day_num"
                        android:textStyle="bold"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:text="@string/caloriesrace_countdown_hint"
                    android:textColor="#CBFFFFFF"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="331dp"
                android:layout_height="280dp"
                android:background="@drawable/bg_enroll_white"
                android:layout_marginTop="11dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:id="@+id/signup_edit_layout"
                    tools:visibility="gone"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/signup_cloriesrace_info_title"
                        android:textColor="#FF542306"
                        android:textSize="18sp"
                        android:layout_marginTop="24dp"
                        android:textStyle="bold"/>

                    <EditText
                        android:layout_width="263dp"
                        android:layout_height="44dp"
                        android:textColor="#FF542306"
                        android:hint="@string/realname_edittext_hint"
                        android:textColorHint="#98542306"
                        android:background="@drawable/caloriesrace_edittext_bg"
                        android:paddingStart="24dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/realname_input"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textCursorDrawable="@null"/>


                    <EditText
                        android:layout_width="263dp"
                        android:layout_height="44dp"
                        android:textColor="#FF542306"
                        android:hint="@string/workno_edittext_hint"
                        android:textColorHint="#98542306"
                        android:background="@drawable/caloriesrace_edittext_bg"
                        android:paddingStart="24dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/workno_input"
                        android:maxLength="8"
                        android:singleLine="true"
                        android:textCursorDrawable="@null"
                        android:inputType="number"/>

                    <Button
                        android:layout_width="263dp"
                        android:layout_height="78dp"
                        android:layout_marginTop="11dp"
                        android:background="@drawable/caloriesrace_signup_btn_bg"
                        android:text="@string/signup_caloiresrace_btn_text"
                        android:textColor="#FFFFFFFF"
                        android:textSize="17sp"
                        android:enabled="false"
                        android:id="@+id/sign_up_btn"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:id="@+id/has_signed_up_layout"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="57dp"
                        android:layout_height="56dp"
                        android:src="@drawable/signed_up"
                        android:layout_marginTop="55dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/has_signed_up_caloriesrace"
                        android:textColor="#FF542306"
                        android:textSize="18sp"
                        android:layout_marginTop="16dp"/>
                    <RelativeLayout
                        android:layout_width="263dp"
                        android:layout_height="48dp"
                        android:background="@drawable/has_signed_up_person_info_bg"
                        android:layout_marginTop="41dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/realname_textview"
                            android:textColor="#98542306"
                            android:textSize="16sp"
                            tools:text="李文峰"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="24dp"
                            android:layout_alignParentLeft="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/workno_textview"
                            android:textColor="#98542306"
                            android:textSize="16sp"
                            tools:text="19234513"
                            android:gravity="center_vertical"
                            android:layout_marginRight="24dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/look_over_caloriesrace_rules"
                android:textColor="#CBFFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="9dp"
                android:id="@+id/look_over_caloriesrace_rules"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:text="@string/caloriesrace_sponsor"
                android:textColor="#99FFFFFF"
                android:textSize="10sp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="47dp"/>
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35714"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>